external-crates/move/crates/move-compiler/tests/move_check/naming/friend_decl_unbound_module.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/move_check/naming/friend_decl_unbound_module.move:3:12
  │
3 │     friend 0x42::Nonexistent;
  │            ^^^^^^^^^^^^^^^^^ Unbound module '0x42::Nonexistent'
